--- a/TITAN.ipynb
+++ b/TITAN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOti37FlSj6D3hEmuafO1Lh",
+      "authorship_tag": "ABX9TyMeGg2f8TbF5E3fcIbJrHce",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1859,7 +1859,7 @@
         "# reading the database\n",
         "data = pd.read_csv(\"test.csv\")\n",
         "\n",
-        "# Bar chart with day against tip\n",
+        "# Bar chart with day against Age\n",
         "plt.bar(data['Age'], data['Fare'])\n",
         "\n",
         "plt.title(\"Bar Chart\")\n",
@@ -1903,7 +1903,7 @@
         "# reading the database\n",
         "data = pd.read_csv(\"test.csv\")\n",
         "\n",
-        "# Scatter plot with day against tip\n",
+        "# Scatter plot with day against Age\n",
         "plt.plot(data['Age'])\n",
         "plt.plot(data['Fare'])\n",
         "\n",
@@ -1948,7 +1948,7 @@
         "# reading the database\n",
         "data = pd.read_csv(\"test.csv\")\n",
         "\n",
-        "# Bar chart with day against tip\n",
+        "# Bar chart with day against Age\n",
         "plt.bar(data['Age'], data['Fare'])\n",
         "\n",
         "plt.title(\"Bar Chart\")\n",
@@ -1992,7 +1992,7 @@
         "# reading the database\n",
         "data = pd.read_csv(\"test.csv\")\n",
         "\n",
-        "# histogram of total_bills\n",
+        "# histogram of Age\n",
         "plt.hist(data['Age'])\n",
         "\n",
         "plt.title(\"Histogram\")\n",
